fixed topic dropdown collapse issue

--- a/app/assets/stylesheets/home/_featured_video.css.sass
+++ b/app/assets/stylesheets/home/_featured_video.css.sass
@@ -72,6 +72,9 @@
   background-color: $green
   margin: -2px
 
+  &.disappear
+    visibility: hidden
+
 #slider-icons
   text-align: center
 
