--- a/app/assets/stylesheets/home/_topic_dropdown.css.sass
+++ b/app/assets/stylesheets/home/_topic_dropdown.css.sass
@@ -3,18 +3,12 @@
 
 #topic_title_box
   @include outer-container
-  margin-top: 30px
+  margin: 30px auto
 
 #topic_title
   display: none
   font-size: 30px
   font-weight: 700
-
-#topic_description
-  display: none
-  margin-top: 10px
-  font-size: 20px
-
 
 #topic_list
   @include span-columns(6)
